--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@ body{
 }
 .container{
     width: 50%;
+    height: 100vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 100px;
+    align-content: center;
 }
 .header,.footer{
     width: 100%;
@@ -38,4 +39,13 @@ i{
 #btn{
     margin: 10px;
     padding:5px 20px;
+}
+@media screen and (max-width:500px){
+    .container{
+        width: 100%;
+    }
+    body{
+        background-size: cover;
+        background-position: center;
+    }
 }
